Fixed the burger menu button so it stays in place after being triggered, fixed the overflow, added a new option to the menus for the join us section, added anchors so they function correctly with a fixed header.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,7 @@ section{
 }
 
 .container-fluid{
-    padding: 0;
-    margin: 20px 0;
-}
-
-h2{
-    margin-top:15px;
+    margin: 20px 0px;
 }
 
 /*--------------------------------Colors */
@@ -49,6 +44,12 @@ header{
 }
 
 /*--------------------------------Titles */
+
+/* This allows the anchors to show the content that would be below the fixed header */
+section h2{
+    padding-top: 56px;
+    margin-top: -56px;
+}
 
 h2{
     font-family: 'Dancing Script', cursive;
@@ -106,27 +107,19 @@ header h1{
     color: #d6dee1;
 }
 
-nav{
-    margin: 0 20px;
-    padding: 0px;
-}
-
 nav li{
     list-style-type: none;
 }
 
-#button-menu a{
+.navbar-toggler{
     background-color: transparent;
     border:2px solid #d6dee1;
     color: #d6dee1;
 }
 
-.btn-group button{
+#button-menu a{
     background-color: transparent;
     border:2px solid #d6dee1;
-}
-
-#burger-menu i{
     color: #d6dee1;
 }
 
@@ -136,20 +129,12 @@ nav li{
 }
 
 /* Will help alongside media queries to show the burger button on small devices, and the button menu on larger ones */
-#burger-menu{
-    display:none;
-    text-align: right;
-    padding: 0px;
-    
+#burger-menu-button{
+    display:none; 
 }
 
-#burger-menu button:focus{
+nav button:focus{
     outline: none;
-
-}
-
-.navbar-toggler{
-    line-height: 0;
 }
 
 /*--------------------------------Scrolling Image */
@@ -160,7 +145,6 @@ nav li{
 
 /* This section allows the images to cycle automatically */
 .slideshow {
-    width:100%; 
     height:0px; 
     padding-bottom: 50%; 
     overflow:hidden; 
@@ -297,7 +281,7 @@ footer p{
         display:none;
     }
 
-    #burger-menu{
+    #burger-menu-button{
         display:block;
     }
 
